split wasm to reduce rebuilding

--- a/launchers/wasm/index.html
+++ b/launchers/wasm/index.html
@@ -87,7 +87,8 @@
         })();
     </script>
 
-    <body>
+    <body oncontextmenu="return false;">
+        Loading Application
     </body>
 
 </html>
