--- a/launchers/wasm/index.html
+++ b/launchers/wasm/index.html
@@ -88,7 +88,8 @@
     </script>
 
     <body oncontextmenu="return false;">
-        Loading Application
+        Bitte haben Sie einen Moment Geduld. Die nächste freie Katze ist für Sie reserviert.
+        Wir müssen nur ein paar größere Mengen Futter übertragen und das kann ein wenig dauern.
     </body>
 
 </html>
