improve start page

--- a/launchers/wasm/index.html
+++ b/launchers/wasm/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <!-- Title -->
-        <title>404 - Not Found</title>
-
+        <title>Anninenonanulysis</title>
         <!-- Meta -->
         <meta charset=utf-8 />
         <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no" />
 
         <!-- OpenGraph -->
-        <meta property=og:title content="404 - Not Found" />
-        <meta property=og:description content="Not Found content" />
+        <meta property=og:title content="Anninenonanulysis" />
+        <meta property=og:description content="Anninenonanulysis" />
 
         <!-- Mobile -->
         <meta name=HandheldFriendly content="True" />
@@ -21,7 +19,6 @@
         <!-- Links -->
         <link rel=icon type=image/png href=assets/favicon.png>
         <link data-trunk rel="sass" href="./main.scss" />
-
         <!-- Trunk Directives -->
         <link rel=copy-dir data-trunk href="../../assets/" />
         <link rel=rust data-trunk />
@@ -88,8 +85,17 @@
     </script>
 
     <body oncontextmenu="return false;">
-        Bitte haben Sie einen Moment Geduld. Die nächste freie Katze ist für Sie reserviert.
+        <p style="width: 80%; text-align: center; margin-top: 2%;">
+        Bitte haben Sie einen Moment Geduld. Die nächste freie Katze ist für Sie reserviert. <br />
         Wir müssen nur ein paar größere Mengen Futter übertragen und das kann ein wenig dauern.
-    </body>
+        </p>
 
+    <div id="marco">
+        <div id="cielo"></div>
+        <div id="luna"></div>
+        <div id="gato"></div>
+        <div id="muro"></div>
+        <div id="edificios"></div>
+	</div>
+    </body>
 </html>
